--- a/index.html
+++ b/index.html
@@ -5,27 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+            integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+            crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a class="nav-link" href="">Studio</a></li>
+                <li><a class="nav-link" href="">Portfolio</a></li>
+                <li><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="address">
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com" target="_blank" rel="noopener noreferrer nofollow">
+                    <a class="address-link" href="mailto:info@devstudio.com" target="_blank" rel="noopener noreferrer nofollow">
                         info@devstudio.com
                     </a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">
+                    <a class="address-link" href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">
                         +11 (000) 111-11-11
                     </a>
                 </li>
@@ -33,64 +42,101 @@
         </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <!-- hero title -->
+        <section class="hero">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button class="hero-order" type="button">Order Service</button>
         </section>
-        <section>
-            <h2 hidden>Strategy</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+        <!-- advetages -->
+        <section class="adventages">
+            <ul class="adventages-list">
+                <li class="adventages-item">
+                    <h3 class="adventages-subtitle">Strategy</h3>
+                    <p class="adventages-item-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                <li class="adventages-item">
+                    <h3 class="adventages-subtitle">Punctuality</h3>
+                    <p class="adventages-item-text">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                <li class="adventages-item">
+                    <h3 class="adventages-subtitle">Diligence</h3>
+                    <p class="adventages-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                <li class="adventages-item">
+                    <h3 class="adventages-subtitle">Technologies</h3>
+                    <p class="adventages-item-text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images1.jpg" alt="Product Designer" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+        <!-- Team -->
+        <section class="team">
+            <h2 class="team-item">Our Team</h2>
+            <ul class="team-list-title">
+                <li class="team-list">
+                    <img src="./img/images1.jpg" alt="Product Designer" width="264" height="260" class="team-item-picture">
+                    <h3 class="team-item-title">Mark Guerrero</h3>
+                    <p class="team-item-text">Product Designer</p>
                 </li>
-                <li>
-                    <img src="./images2.jpg" alt="Frontend Developer" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                <li class="team-list">
+                    <img src="./img/images2.jpg" alt="Frontend Developer" width="264" height="260" class="team-item-picture">
+                    <h3 class="team-item-title">Tom Ford</h3>
+                    <p class="team-item-text">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images3.jpg" alt="Marketing" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                <li class="team-list">
+                    <img src="./img/images3.jpg" alt="Marketing" width="264" height="260" class="team-item-picture">
+                    <h3 class="team-item-title">Camila Garcia</h3>
+                    <p class="team-item-text">Marketing</p>
+                <li class="team-list">
+                    <img src="./img/images4.jpg" alt="UI Designer" width="264" height="260" class="team-item-picture">
+                    <h3 class="team-item-title">Daniel Wilson</h3>
+                    <p class="team-item-text">UI Designer</p>
                 </li>
-                <li>
-                    <img src="./images4.jpg" alt="UI Designer" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+            </ul>
+        </section>
+        <!-- section  Portfolio-->
+        <section class="portfolio">
+            <h2 class="portfolio-item">Our Portfolio</h2>
+            <ul class="portfolio-item-title">
+                <li class="portfolio-list">
+                    <img src="./img/img(12).jpg" alt="App" width="360" height="300" class="portfolio-images">
+                    <h3 class="portfolio-item-list">Banking App</h3>
+                    <p class="portfolio-title">App</p>
+                </li>
+                <li class="portfolio-list">
+                    <img src="./img/img(11).jpg" alt="Cashless Payment"  width="360" height="300" class="portfolio-images">
+                    <h3 class="portfolio-item-list">Cashless Payment</h3>
+                    <p class="portfolio-title">Marketing</p>
+                </li>
+                <li class="portfolio-list">
+                    <img src="./img/img(10).jpg" alt="App"  width="360" height="300" class="portfolio-images">
+                    <h3 class="portfolio-item-list">Meditation App</h3>
+                    <p class="portfolio-title">App</p>
+                </li>
+                <li class="portfolio-list">
+                    <img src="./img/img(9).jpg" alt="Marketing"  width="360" height="300" class="portfolio-images">
+                    <h3 class="portfolio-item-list">Taxi Service</h3>
+                    <p class="portfolio-title">Marketing</p>
+                </li>
+                <li class="portfolio-list">
+                    <img src="./img/img(8).jpg" alt="Design"  width="360" height="300" class="portfolio-images">
+                    <h3 class="portfolio-item-list">Screen Illustrations</h3>
+                    <p class="portfolio-title">Design</p>
+                </li>
+                <li class="portfolio-list">
+                    <img src="./img/img(7).jpg" alt="Marketing"  width="360" height="300" class="portfolio-images">
+                    <h3 class="portfolio-item-list">Online Courses</h3>
+                    <p class="portfolio-title">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="footer-list" href="./index.html">Web<span class="footer-list-item">Studio</span></a>
+        <p class="footer-title">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
 </body>
