--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </ul>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer"k>
         <a class="footer-list" href="./index.html">Web<span class="footer-list-item">Studio</span></a>
         <p class="footer-title">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
