--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
+    <link 
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -49,23 +49,24 @@
         </section>
         <!-- advetages -->
         <section class="adventages">
+            <h2 class="adventages-item-list">Strategy</h2>
             <ul class="adventages-list">
-                <li class="adventages-item">
+                <li class="adventages-item-title">
                     <h3 class="adventages-subtitle">Strategy</h3>
                     <p class="adventages-item-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li class="adventages-item">
+                <li class="adventages-item-title">
                     <h3 class="adventages-subtitle">Punctuality</h3>
                     <p class="adventages-item-text">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
-                <li class="adventages-item">
+                <li class="adventages-item-title">
                     <h3 class="adventages-subtitle">Diligence</h3>
                     <p class="adventages-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
-                <li class="adventages-item">
+                <li class="adventages-item-title">
                     <h3 class="adventages-subtitle">Technologies</h3>
                     <p class="adventages-item-text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
