--- a/index.html
+++ b/index.html
@@ -103,32 +103,32 @@
             <h2 class="portfolio-item">Our Portfolio</h2>
             <ul class="portfolio-item-title">
                 <li class="portfolio-list">
-                    <img src="./img/img(12).jpg" alt="App" width="360" height="300" class="portfolio-images">
+                    <img src="./img/img9.jpg" alt="App" width="360" height="300" class="portfolio-images">
                     <h3 class="portfolio-item-list">Banking App</h3>
                     <p class="portfolio-title">App</p>
                 </li>
                 <li class="portfolio-list">
-                    <img src="./img/img(11).jpg" alt="Cashless Payment"  width="360" height="300" class="portfolio-images">
+                    <img src="./img/img8.jpg" alt="Cashless Payment"  width="360" height="300" class="portfolio-images">
                     <h3 class="portfolio-item-list">Cashless Payment</h3>
                     <p class="portfolio-title">Marketing</p>
                 </li>
                 <li class="portfolio-list">
-                    <img src="./img/img(10).jpg" alt="App"  width="360" height="300" class="portfolio-images">
+                    <img src="./img/img7.jpg" alt="App"  width="360" height="300" class="portfolio-images">
                     <h3 class="portfolio-item-list">Meditation App</h3>
                     <p class="portfolio-title">App</p>
                 </li>
                 <li class="portfolio-list">
-                    <img src="./img/img(9).jpg" alt="Marketing"  width="360" height="300" class="portfolio-images">
+                    <img src="./img/img6.jpg" alt="Marketing"  width="360" height="300" class="portfolio-images">
                     <h3 class="portfolio-item-list">Taxi Service</h3>
                     <p class="portfolio-title">Marketing</p>
                 </li>
                 <li class="portfolio-list">
-                    <img src="./img/img(8).jpg" alt="Design"  width="360" height="300" class="portfolio-images">
+                    <img src="./img/img5.jpg" alt="Design"  width="360" height="300" class="portfolio-images">
                     <h3 class="portfolio-item-list">Screen Illustrations</h3>
                     <p class="portfolio-title">Design</p>
                 </li>
                 <li class="portfolio-list">
-                    <img src="./img/img(7).jpg" alt="Marketing"  width="360" height="300" class="portfolio-images">
+                    <img src="./img/img4.jpg" alt="Marketing"  width="360" height="300" class="portfolio-images">
                     <h3 class="portfolio-item-list">Online Courses</h3>
                     <p class="portfolio-title">Marketing</p>
                 </li>
