--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h2 class="portfolio-item">Our Portfolio</h2>
             <ul class="portfolio-item-title">
                 <li class="portfolio-list">
-                    <img src="./img/images9.jpg" alt="App" width="360" height="300" class="portfolio-images">
+                    <img src="./img/images9.jpg" alt="App" width="360" height="300">
                     <h3 class="portfolio-item-list">Banking App</h3>
                     <p class="portfolio-title">App</p>
                 </li>
