--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
             <h2 class="team-item">Our Team</h2>
             <ul class="team-list-title">
                 <li class="team-list">
-                    <img src="./img/images1.jpg" alt="Product Designer" width="264" height="260" class="team-item-picture">
+                    <img src="./images/images1.jpg" alt="Product Designer" width="264" height="260" class="team-item-picture">
                     <h3 class="team-item-title">Mark Guerrero</h3>
                     <p class="team-item-text">Product Designer</p>
                 </li>
                 <li class="team-list">
-                    <img src="./img/images2.jpg" alt="Frontend Developer" width="264" height="260" class="team-item-picture">
+                    <img src="./images/images2.jpg" alt="Frontend Developer" width="264" height="260" class="team-item-picture">
                     <h3 class="team-item-title">Tom Ford</h3>
                     <p class="team-item-text">Frontend Developer</p>
                 </li>
                 <li class="team-list">
-                    <img src="./img/images3.jpg" alt="Marketing" width="264" height="260" class="team-item-picture">
+                    <img src="./images/images4.jpg" alt="Marketing" width="264" height="260" class="team-item-picture">
                     <h3 class="team-item-title">Camila Garcia</h3>
                     <p class="team-item-text">Marketing</p>
                 <li class="team-list">
-                    <img src="./img/images4.jpg" alt="UI Designer" width="264" height="260" class="team-item-picture">
+                    <img src="./images/images3.jpg" alt="UI Designer" width="264" height="260" class="team-item-picture">
                     <h3 class="team-item-title">Daniel Wilson</h3>
                     <p class="team-item-text">UI Designer</p>
                 </li>
@@ -108,27 +108,27 @@
                     <p class="portfolio-title">App</p>
                 </li>
                 <li class="portfolio-list">
-                    <img src="./img/images8.jpg" alt="Cashless Payment"  width="360" height="300" class="portfolio-images">
+                    <img src="./images/images8.jpg" alt="Cashless Payment"  width="360" height="300" class="portfolio-images">
                     <h3 class="portfolio-item-list">Cashless Payment</h3>
                     <p class="portfolio-title">Marketing</p>
                 </li>
                 <li class="portfolio-list">
-                    <img src="./img/images7.jpg" alt="App"  width="360" height="300" class="portfolio-images">
+                    <img src="./images/images7.jpg" alt="App"  width="360" height="300" class="portfolio-images">
                     <h3 class="portfolio-item-list">Meditation App</h3>
                     <p class="portfolio-title">App</p>
                 </li>
                 <li class="portfolio-list">
-                    <img src="./img/images6.jpg" alt="Marketing"  width="360" height="300" class="portfolio-images">
+                    <img src="./images/images6.jpg" alt="Marketing"  width="360" height="300" class="portfolio-images">
                     <h3 class="portfolio-item-list">Taxi Service</h3>
                     <p class="portfolio-title">Marketing</p>
                 </li>
                 <li class="portfolio-list">
-                    <img src="./img/images5.jpg" alt="Design"  width="360" height="300" class="portfolio-images">
+                    <img src="./images/images5.jpg" alt="Design"  width="360" height="300" class="portfolio-images">
                     <h3 class="portfolio-item-list">Screen Illustrations</h3>
                     <p class="portfolio-title">Design</p>
                 </li>
                 <li class="portfolio-list">
-                    <img src="./img/images40.jpg" alt="Marketing"  width="360" height="300" class="portfolio-images">
+                    <img src="./images/images40.jpg" alt="Marketing"  width="360" height="300" class="portfolio-images">
                     <h3 class="portfolio-item-list">Online Courses</h3>
                     <p class="portfolio-title">Marketing</p>
                 </li>
