--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- hero title -->
         <section class="hero">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button class="hero-order" type="button"><span class="hero-order-title">Order Service</span></button>
+            <button class="hero-order" type="button">Order Service></button>
         </section>
         <!-- advetages -->
         <section class="adventages">
